mint page becoming mobile friendly.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,27 @@
-
 <div id="page-container">
-  
+
 
   <div id="content-wrap">
 
     <div class="container">
-      
-      <div><app-navbar></app-navbar></div>
+
+      <div>
+        <app-navbar></app-navbar>
+      </div>
 
       <div class="card main" class="main" id="styledText" style="position: relative;top: 110px;justify-items: center;
-      display: grid;">
-        
+      display: grid;text-align: center;">
+
 
         <img id="center-img" src="../../../assets/toonverse/greenCat.png" alt="logo" height="10%" width="10%"
           style="position: relative;top: -20px; border-radius: 5%; object-fit: contain; height: auto;" />
 
-        <router-outlet ></router-outlet>
+        <router-outlet></router-outlet>
 
       </div>
 
       <br /><br />
-      test3
     </div>
-    test4
   </div>
   <app-footer id="footer"></app-footer>
 </div>
