--- a/src/app/components/mint/mint.component.html
+++ b/src/app/components/mint/mint.component.html
@@ -1,4 +1,6 @@
 
+
+<div class="container" style="word-wrap: break-word;text-align: center;width: 90vw">
 <h3 id="styledText">Welcome to the DevilCatz Mint Page!</h3>
 <br>
   <div class="container" style="width: 100%; max-width: 850px;display: grid;
@@ -141,5 +143,5 @@
   :)
   <br>
   <!-- <div class="container" style="width:50%;"> -->
-
+  </div>
 
