mint and homepage good for styling.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       </div>
 
       <div class="card main" class="main" id="styledText" style="position: relative;top: 110px;justify-items: center;
-      display: grid;text-align: center;">
+      text-align: center;">
 
 
         <img id="center-img" src="../../../assets/toonverse/greenCat.png" alt="logo" height="10%" width="10%"
