--- a/src/app/components/mint/mint.component.scss
+++ b/src/app/components/mint/mint.component.scss
@@ -1,7 +1,7 @@
 .card-lightblue {
     background-color: aliceblue;
     border-radius: 5%;
-    // max-width: 60%;
+    min-width: 350px;
 }
 
 .card-lightblue:hover {
@@ -35,7 +35,7 @@
     text-shadow: 1px 1px 1px #000;
     border-radius: 10px;
     background-color: pink;
-    min-height: 15vh;
+    min-height:25%;
     
 }
 
