navbar a little better.

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -10,7 +10,7 @@
   #navbar-text{
     font-family: EncodeSansCondensedBold;
     transition: 0.5s all ease-in-out;
-
+    font-size: large;
     margin: 5px;
   }
 
