--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -21,9 +21,9 @@
     margin: 5px;
   }
 
-  .styled {
-    max-width: 200px;
+  .styledNav {
     min-width: 150px;
+    margin: auto;
     margin-bottom: 4px;
     border: 0;
     line-height: 2.5;
