--- a/src/app/components/mint/mint.component.html
+++ b/src/app/components/mint/mint.component.html
@@ -126,7 +126,7 @@
 
 
   <div class="paragraph" style="margin-bottom: 10%;">
-      <br> <br><p>Your Support is greatly appreciated from the Artist Keith Miller, he Developer Eric Webb, and the rest of the Team who is all making this possible.<br> We are excited to bring you more content and collections.<br>
+      <br> <br><p>Your Support is greatly appreciated from the Artist Keith Miller, the Developer Eric Webb, and the rest of the Team who is all making this possible.<br> We are excited to bring you more content and collections.<br>
        Thank you!<br>
       :)
       <br>
