--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
           <img src="./../../../assets/toonverse/toonverseLogo.png" alt="logo" width="50" style="border-radius: 50%;" />
         </div>
 
-        <h6 id="navbar-text">Toonverse Studios!</h6>
+        <h6  (click)="basicNavbar.toggle()" id="navbar-text">Toonverse Studios!</h6>
 
       </a>
 
@@ -27,22 +27,23 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li>
-          <p> <button id="navbar-text" class="styled" [routerLink]="['/mint']">Mint DevilCat!</button>
+          <p> <button (click)="basicNavbar.toggle()" id="navbar-text" class="styled" [routerLink]="['/mint']">Mint DevilCat!</button>
           </p>
         </li>
         <li class="nav-item">
-          <p id="navbar-text" class="styled" [routerLink]="['/manage']">Login</p>
-        </li>
-        <li class="nav-item" id="nav-item">
-          <p id="navbar-text" class="styled" [routerLink]="['/about']">About</p>
-        </li>
-        <li class="nav-item">
-          <p id="navbar-text" class="styled" [routerLink]="['/team']">Team</p>
+          <p id="navbar-text"(click)="basicNavbar.toggle()" class="styled" [routerLink]="['/viewcatz']"> LookUp</p>
         </li>
 
         <li class="nav-item">
-          <p id="navbar-text" class="styled" [routerLink]="['/viewcatz']">DevilCat LookUp</p>
+          <p (click)="basicNavbar.toggle()" id="navbar-text" class="styled" [routerLink]="['/manage']">Login</p>
         </li>
+        
+        <!-- <li class="nav-item" id="nav-item">
+          <p id="navbar-text" (click)="basicNavbar.toggle()" class="styled" [routerLink]="['/about']">About</p>
+        </li>
+        <li class="nav-item">
+          <p id="navbar-text"(click)="basicNavbar.toggle()" class="styled" [routerLink]="['/team']">Team</p>
+        </li> -->
 
         <!-- <li class="nav-item">
           <p id="navbar-text"  class="styled"[routerLink]="['/roadmap']">RoadMap</p>
