--- a/src/app/components/viewcatz/viewcatz.component.html
+++ b/src/app/components/viewcatz/viewcatz.component.html
@@ -1,26 +1,25 @@
-<div class="center-div">
-    <div class="card main" style="min-width: 100%;">
+<div class="center-div" style="display: grid;justify-items: center;">
 
-        <div class="card-header" style="border-radius: 5%; position: relative; top: -90px;">
+        <div class="card" style="border-radius: 5%; box-shadow: none;background: none;margin-bottom: 100px; ">
 
 
-            <img id="center-img" src="../../../assets/toonverse/greenCat.png" alt="logo" height="400vh" width="400vw"
-                style="border-radius: 5%" />
+
             <br>
             <h3 class="card-text">
                 <br>
                 <u> View Your Catz or Others!</u>
             </h3>
-            <div class="row" style="justify-content: center;">
+            <div class="row" style="justify-content: center;margin-top: 5%;">
 
 
     
-                <div class="col-4">
+                <div class="col-md" >
                     <div id="card-lightblue" style="min-height:100%">
-                        <p>Eth Address Lookup</p>
+                        <p>Eth Address <br>Lookup</p>
+                        
                         <mdb-form-control>
                             <input mdbInput (ngModelChange)="updateSearchedAddress($event)" [ngModel]="searchedAddress"
-                                type="text" id="typeText" class="styled" placeholder="Eth Address" />
+                                type="text" id="typeText" class="styled" placeholder="Eth Address" /><br>
                             <button mdbLabel (click)="searchByEthAddress()" class="styled"
                                 for="typeText">Search</button>
                         </mdb-form-control>
@@ -30,9 +29,7 @@
                 </div>
 
 
-
-
-                <div class="col-4">
+                <div class="col-md">
                     <div id="card-lightblue" style="min-height:100%">
 
                         <p>DevilCat ID# Lookup</p>
@@ -40,7 +37,7 @@
                         <mdb-form-control>
                             <input mdbInput (ngModelChange)="updateSearchedID($event)" [ngModel]="searchedId"
                                 type="number" min="0" max="2222" id="typeText" placeholder="DevilCatID#"
-                                class="styled" />
+                                class="styled" /><br>
                             <button (click)="searchById()" class="styled" for="typeText">Search</button>
                         </mdb-form-control>
                     </div>
@@ -56,7 +53,7 @@
 
         <!-- ETH ADDRESS LOOK UP RESULTS-->
         <div class="ByAddressView" *ngIf="tokenJsonArray.length >0"
-            style="max-width: 100%; width: 65%;top: -90px;position: relative;">
+            style="max-width: 100%; width: 65%;">
             <br>
 
             <button class="styled" (click)="clearCatObj()">Clear</button>
@@ -83,7 +80,7 @@
 
         <!-- GET BY CAT ID DIV -->
         <div class="ByCatIDView" *ngIf="catObj!=null"
-            style="max-width: 100%; width: 65%;top: -90px;position: relative;">
+            style="max-width: 100%; width: 65%;margin-bottom: 100px;">
             <br>
             <button class="styled" (click)="clearCatObj()">Clear</button>
             <br> <br>
@@ -111,5 +108,6 @@
                 </table>
             </div>
         </div>
-    </div>
+
+        
 </div>
