front page and mint look pleasing and mobile too.

--- a/src/app/components/mint/mint.component.html
+++ b/src/app/components/mint/mint.component.html
@@ -1,11 +1,14 @@
 <div class="container" style="word-wrap: break-word;text-align: center;width: 90vw">
   <h3 id="styledText">Welcome to the DevilCatz Minting Page!</h3>
   <h4>
-    <button id="styled-mint-button" style="margin: 1%;"> <a style="margin: 10%;" href="https://etherscan.io/token/0x1c4a28690482b03f6991c8c24295016cba197c12#code"
-        style="margin: 10px;">View Contract</a></button>
-    <button id="styled-mint-button" style="margin: 1%;"> <a href="https://opensea.io/collection/toonversestudios" style="margin: 10px">View
+    <button id="styled-mint-button" style="margin: 1%;"> <a style="margin: 10%;"
+        href="https://etherscan.io/token/0x1c4a28690482b03f6991c8c24295016cba197c12#code" style="margin: 10px;">View
+        Contract</a></button>
+    <button id="styled-mint-button" style="margin: 1%;"> <a href="https://opensea.io/collection/toonversestudios"
+        style="margin: 10px">View
         Opensea</a></button>
-    <button  id="styled-mint-button" style="margin: 1%;"> <a href="https://rarible.com/toonverseStudios">View Rarible</a></button>
+    <button id="styled-mint-button" style="margin: 1%;"> <a href="https://rarible.com/toonverseStudios">View
+        Rarible</a></button>
 
   </h4>
 
@@ -15,13 +18,14 @@
   <p class="yellowHighlight">{{totalSupply}} Minted!</p>
   <p>out of</p>
   <p class="yellowHighlight">2222</p>
-  <br> <p>Owning a DevilCatz token entitles you to future collection drops.</p> 
-  
+  <br>
+  <p>Owning a DevilCatz token entitles you to future collection drops.</p>
+
   <p>This is a gas optimized ERC721A.
     <br>
     Pixelated version of cats and designated factions of future drops included.
 
-<br><br>
+    <br><br>
 
 
 
@@ -126,8 +130,11 @@
 
 
   <div class="paragraph" style="margin-bottom: 10%;">
-      <br> <br><p style="margin-left: -2%;">Your Support is greatly appreciated from the Artist Keith Miller, the Developer Eric Webb, and the rest of the Team who is all making this possible.<br> We are excited to bring you more content and collections.<br>
-       Thank you!<br>
+    <br> <br>
+    <p style="margin-left: -2%;  max-width: 1200px;">Your Support is greatly appreciated from the Artist Keith (GIP) Miller, the Developer Eric (SudoAkula) Webb, and
+      the rest of the Team who is all making this possible.<br> We are excited to bring you more content and
+      collections.<br>
+      Thank you!<br>
       :)
       <br>
     </p>
