--- a/src/app/components/manage/manage.component.html
+++ b/src/app/components/manage/manage.component.html
@@ -38,9 +38,9 @@
 
         <p>Welcome "{{ userAddress }}"!
           <br>
-          TOATAL UNSTAKED DEVILCATZ :10
+          TOATAL UNSTAKED DEVILCATZ :5
           <br>
-          TOATAL STAKED DEVILCATZ :10
+          TOATAL STAKED DEVILCATZ :5
         <p>Claimed TOONCOIN : 2500 <img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo"
             height="25vh" width="25" style="border-radius: 5%" />
           <br>
@@ -54,7 +54,7 @@
           <br />
           Staked {{ contractSymbol }} : {{ tokensStaked }} -->
         <div class="container" id="unstaked" style="background-color: rgb(236, 230, 230)">
-          <h3>UNSTAKED DEVILCATZ : 10</h3>
+          <h3>UNSTAKED DEVILCATZ : 5</h3>
           <div class="row" style="margin-bottom: 20px;">
             <div class="col-sm">
               <button class="styled">
@@ -63,28 +63,30 @@
             </div>
             <div class="col-sm">
               <button class="styled">
-                STAKE 15
+                STAKE 3
               </button>
             </div>
 
           </div>
           <div class="row">
-            <div class="col-sm" *ngFor="let token of tokenJsonArray">
-              <div class="card-body" id="styled">
-                <p class="card-text" style="font-size: 1em">
-                  {{token.data.name}}
-                </p>
+            <div class="col-sm" *ngFor="let token of tokenJsonArray; let index = index">
+              <div *ngIf="index >= 5">
+                <div class="card-body" id="styled">
+                  <p class="card-text" style="font-size: 1em">
+                    {{token.data.name}}
+                  </p>
 
-                <img id="center-img" src={{token.data.image}} alt="logo" height="100vh" width="100"
-                  style="border-radius: 5%" />
-                <br>
-                <br>
+                  <img id="center-img" src={{token.data.image}} alt="logo" height="100vh" width="100"
+                    style="border-radius: 5%" />
+                  <br>
+                  <br>
 
-                <button class="styled">Stake</button>
-                <br>
-                <br>
-                <input mdbCheckbox style="border-color: pink; text-decoration: black;" class="form-check-input"
-                  type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
+                  <button class="styled">Stake</button>
+                  <br>
+                  <br>
+                  <input mdbCheckbox style="border-color: pink; text-decoration: black;" class="form-check-input"
+                    type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
+                </div>
               </div>
             </div>
           </div>
@@ -93,7 +95,7 @@
       <br>
 
       <div class="container" id="staked" style="position: relative;top: -90px; background-color: rgb(198, 195, 195);">
-        <h3>STAKED DEVILCATZ : 10</h3>
+        <h3>STAKED DEVILCATZ : 5</h3>
 
         <div class="row" style="margin-bottom: 20px;">
           <div class="col-md">
@@ -103,7 +105,7 @@
           </div>
           <div class="col-md">
             <button class="styled">
-              Unstake 15
+              Unstake 3
             </button>
           </div>
           <div class="col-md">
@@ -123,32 +125,36 @@
         </div>
 
         <div class="row">
-          <div class="col-sm" *ngFor="let token of tokenJsonArray">
-            <div class="card-body" id="styled">
-              <p class="card-text" style="font-size: 1em">
-                {{token.data.name}}
-              </p>
 
-              <img id="center-img" src={{token.data.image}} alt="logo" height="100vh" width="100"
-                style="border-radius: 5%" />
-              <br>
-              <br>
+          <div class="col-sm" *ngFor="let token of tokenJsonArray; let index = index">
+            <div *ngIf="index <= 5">
+              <div class="card-body" id="styled">
+                <p class="card-text" style="font-size: 1em">
+                  {{token.data.name}}
+                </p>
 
-              <p>13<img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo" height="25vh" width="25"
-                  style="border-radius: 5%" /></p>
-              <button class="styled">
-                Collect
-              </button>
-              <br> <button class="styled">Unstake</button>
-              <br>
-              <div>
+                <img id="center-img" src={{token.data.image}} alt="logo" height="100vh" width="100"
+                  style="border-radius: 5%" />
                 <br>
-                <input mdbCheckbox style="border-color: pink; text-decoration: black;" class="form-check-input"
-                  type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
+                <br>
+
+                <p>13<img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo" height="25vh"
+                    width="25" style="border-radius: 5%" /></p>
+                <button class="styled">
+                  Collect
+                </button>
+                <br> <button class="styled">Unstake</button>
+                <br>
+                <div>
+                  <br>
+                  <input mdbCheckbox style="border-color: pink; text-decoration: black;" class="form-check-input"
+                    type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
+                </div>
+
+
               </div>
-
-
             </div>
+
           </div>
         </div>
       </div>
