Look up button pretty now and mobile friendly.

--- a/src/app/components/viewcatz/viewcatz.component.html
+++ b/src/app/components/viewcatz/viewcatz.component.html
@@ -14,7 +14,10 @@
 
     
                 <div class="col-md" >
-                    <div id="card-lightblue" style="min-height:100%">
+                    <div id="card-lightblue" style="min-height: 100%;
+                    max-width: 350px;
+                    margin-left: auto;
+                    margin-right: auto;">
                         <p>Eth Address <br>Lookup</p>
                         
                         <mdb-form-control>
@@ -27,11 +30,13 @@
 
                     </div>
                 </div>
-
+&nbsp;
 
                 <div class="col-md">
-                    <div id="card-lightblue" style="min-height:100%">
-
+                    <div id="card-lightblue" style="min-height: 100%;
+                    max-width: 350px;
+                    margin-left: auto;
+                    margin-right: auto;">
                         <p>DevilCat ID# Lookup</p>
 
                         <mdb-form-control>
