--- a/src/app/components/manage/manage.component.html
+++ b/src/app/components/manage/manage.component.html
@@ -38,13 +38,14 @@
 
         <p>Welcome "{{ userAddress }}"!
           <br>
-          TOATAL UNSTAKED DEVILCATZ :5
+          TOATAL UNSTAKED DEVILCATZ :{{unstakedJsonArray.length}}
           <br>
-          TOATAL STAKED DEVILCATZ :5
+          TOATAL STAKED DEVILCATZ :{{stakedJsonArray.length}}
         <p>Claimed TOONCOIN : 2500 <img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo"
             height="25vh" width="25" style="border-radius: 5%" />
           <br>
-          Unclaimed TOONCOIN : 250
+          Unclaimed TOONCOIN : test
+          <!-- {{erc20Unclaimed}} -->
           <img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo" height="25vh" width="25"
             style="border-radius: 5%" />
 
@@ -54,23 +55,25 @@
           <br />
           Staked {{ contractSymbol }} : {{ tokensStaked }} -->
         <div class="container" id="unstaked" style="background-color: rgb(236, 230, 230)">
-          <h3>UNSTAKED DEVILCATZ : 5</h3>
+          <h3>UNSTAKED DEVILCATZ : {{unstakedJsonArray.length}}</h3>
           <div class="row" style="margin-bottom: 20px;">
             <div class="col-sm">
               <button class="styled">
-                STAKE ALL
+                <!-- STAKE ALL {{erc721Owned}} -->
+                STAKE ALL {{unstakedJsonArray.length}}
+
               </button>
             </div>
             <div class="col-sm">
               <button class="styled">
-                STAKE 3
+                STAKE {{erc721OwnedSelectedToStake.size}}
               </button>
             </div>
 
           </div>
           <div class="row">
-            <div class="col-sm" *ngFor="let token of tokenJsonArray; let index = index">
-              <div *ngIf="index >= 5">
+            <div class="col-sm" *ngFor="let token of unstakedJsonArray;">
+              <div *ngIf="token.data.edition >= 5">
                 <div class="card-body" id="styled">
                   <p class="card-text" style="font-size: 1em">
                     {{token.data.name}}
@@ -84,7 +87,7 @@
                   <button class="styled">Stake</button>
                   <br>
                   <br>
-                  <input mdbCheckbox style="border-color: pink; text-decoration: black;" class="form-check-input"
+                  <input mdbCheckbox  (click)="updateCatsToStakeMap(token.data.edition)" style="border-color: pink; text-decoration: black;" class="form-check-input"
                     type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
                 </div>
               </div>
@@ -95,22 +98,22 @@
       <br>
 
       <div class="container" id="staked" style="position: relative;top: -90px; background-color: rgb(198, 195, 195);">
-        <h3>STAKED DEVILCATZ : 5</h3>
+        <h3>STAKED DEVILCATZ : {{stakedJsonArray.length}}</h3>
 
         <div class="row" style="margin-bottom: 20px;">
           <div class="col-md">
             <button class="styled">
-              Unstake All
+              Unstake All {{stakedJsonArray.length}}
             </button>
           </div>
           <div class="col-md">
             <button class="styled">
-              Unstake 3
+              Unstake {{erc721StakedSelectToUnStake.size}}
             </button>
           </div>
           <div class="col-md">
             <button class="styled">
-              Collect All
+              Collect All {{erc20Unclaimed}}
               <img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo" height="25vh" width="25"
                 style="border-radius: 5%" />
             </button>
@@ -126,8 +129,7 @@
 
         <div class="row">
 
-          <div class="col-sm" *ngFor="let token of tokenJsonArray; let index = index">
-            <div *ngIf="index <= 5">
+          <div class="col-sm" *ngFor="let token of stakedJsonArray;">
               <div class="card-body" id="styled">
                 <p class="card-text" style="font-size: 1em">
                   {{token.data.name}}
@@ -138,7 +140,7 @@
                 <br>
                 <br>
 
-                <p>13<img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo" height="25vh"
+                <p>{{getStakedNftReward()}}<img id="center-img" src="../../../assets/toonverse/catCoin.gif" alt="logo" height="25vh"
                     width="25" style="border-radius: 5%" /></p>
                 <button class="styled">
                   Collect
@@ -147,13 +149,12 @@
                 <br>
                 <div>
                   <br>
-                  <input mdbCheckbox style="border-color: pink; text-decoration: black;" class="form-check-input"
+                  <input mdbCheckbox (click)="updateCatsToUnstakeMap(token.data.edition)"  style="border-color: pink; text-decoration: black;" class="form-check-input"
                     type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
                 </div>
 
 
               </div>
-            </div>
 
           </div>
         </div>
